backend/.mypy_reports/mypy_sample_errors.txt
apps/core/config/schema/field.py:213:26: error: Missing type parameters for
generic type "dict"  [type-arg]
        def to_dict(self) -> dict:
                             ^
apps/automation/services/sms/parsing/party_candidate_extractor.py:40:9: error:
Returning Any from function declared to return "list[str]"  [no-any-return]
            return self._deduplicate(candidates, max_candidates)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/automation/services/sms/parsing/party_candidate_extractor.py:40:16: error:
"PartyCandidateExtractor" has no attribute "_deduplicate"  [attr-defined]
            return self._deduplicate(candidates, max_candidates)
                   ^~~~~~~~~~~~~~~~~
apps/automation/services/sms/parsing/party_candidate_extractor.py:66:21: error:
Name "candidates" is not defined  [name-defined]
            for cand in candidates:
                        ^
apps/automation/services/sms/parsing/party_candidate_extractor.py:70:32: error:
Name "max_count" is not defined  [name-defined]
                    if len(out) >= max_count:
                                   ^
apps/core/llm/backends/registry.py:29:5: error: Returning Any from function
declared to return "type[ILLMBackend]"  [no-any-return]
        return backend_cls
        ^~~~~~~~~~~~~~~~~~
apps/core/config/environment.py:403:13: error: "object" has no attribute
"append"  [attr-defined]
                result['warnings'].append(f"当前环境 ({self.environment_name})...
                ^~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/environment.py:412:17: error: "object" has no attribute
"append"  [attr-defined]
                    result['missing_env_vars'].append(env_var)
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/environment.py:413:17: error: "object" has no attribute
"append"  [attr-defined]
                    result['errors'].append(f"缺少敏感配置环境变量: {env_var} (用于 {c...
                    ^~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/environment.py:416:17: error: "object" has no attribute
"append"  [attr-defined]
                    result['warnings'].append(f"环境变量 {env_var} 的值可能不安全")
                    ^~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/environment.py:417:17: error: "object" has no attribute
"append"  [attr-defined]
                    result['recommendations'].append(f"请为 {env_var} 设置更安全的...
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/validators/dependency_validator.py:172:13: error: Returning
Any from function declared to return "bool"  [no-any-return]
                return eval(condition, allowed_names)
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/validators/dependency_validator.py:234:9: error: Need type
annotation for "path" (hint: "path: List[<type>] = ...")  [var-annotated]
            path = []
            ^~~~
apps/core/config/steering/dependency/graph.py:12:5: error: Function is missing
a return type annotation  [no-untyped-def]
        def __init__(self):
        ^
apps/core/config/steering/dependency/graph.py:12:5: note: Use "-> None" if function does not return a value
apps/core/config/steering/dependency/graph.py:66:13: error: Function is missing
a return type annotation  [no-untyped-def]
                def dfs(node: str, path: list[str]):
                ^
apps/core/config/schema/schema.py:18:5: error: Function is missing a return
type annotation  [no-untyped-def]
        def __init__(self):
        ^
apps/core/config/schema/schema.py:18:5: note: Use "-> None" if function does not return a value
apps/core/config/schema/schema.py:174:21: error: Incompatible types in
assignment (expression has type "ConfigField | None", variable has type
"ConfigField")  [assignment]
                field = self.get_field(key)
                        ^~~~~~~~~~~~~~~~~~~
apps/core/config/schema/registry.py:1010:1: error: Function is missing a return
type annotation  [no-untyped-def]
    def validate_registry_consistency():
    ^
apps/core/config/schema/registry.py:1010:1: note: Use "-> None" if function does not return a value
apps/core/config/schema/registry.py:1019:5: error: Need type annotation for
"env_vars" (hint: "env_vars: Dict[<type>, <type>] = ...")  [var-annotated]
        env_vars = {}
        ^~~~~~~~
apps/core/config/schema/registry.py:1046:1: error: Call to untyped function
"validate_registry_consistency" in typed context  [no-untyped-call]
    validate_registry_consistency()
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/core/config/providers/env.py:177:42: error: Missing type parameters for
generic type "list"  [type-arg]
        def _parse_list(self, value: str) -> list:
                                             ^
apps/core/config/providers/env.py:189:42: error: Missing type parameters for
generic type "dict"  [type-arg]
        def _parse_dict(self, value: str) -> dict:
                                             ^
apps/core/config/components/reload_coordinator.py:9:5: error: Function is
missing a type annotation  [no-untyped-def]
        def __init__(self, manager):
        ^
apps/core/config/components/reload_coordinator.py:27:9: error: Returning Any
from function declared to return "bool"  [no-any-return]
            return self._m._auto_reload_enabled
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
